New Model Training

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -3267,6 +3267,14 @@
    "id": "9ccfd03a7748f003"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "df2 = tdf.copy()",
+   "id": "171faadc0b07ed56"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-17T11:54:30.246501Z",
@@ -4181,168 +4189,16 @@
    "execution_count": null
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "### Polynomial features\n",
-    "\n",
-    "Existing features (interactive, derived, dataset-based) had weak correlation with churn. This suggests that linear relationships are insufficient, and non-linear interactions might be more useful.\n",
-    "\n",
-    "Clustering was ineffective. The current feature space does not separate churners and non-churners well."
-   ],
-   "id": "8dbae21e30411aa0"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-17T11:54:33.932301Z",
-     "start_time": "2025-02-17T11:54:33.922768Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "numerical_vars",
-   "id": "cfca9b8845ee8e65",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Seconds of Use',\n",
-       " 'Frequency of use',\n",
-       " 'Frequency of SMS',\n",
-       " 'Distinct Called Numbers',\n",
-       " 'Customer Value',\n",
-       " 'Call Efficiency',\n",
-       " 'Age',\n",
-       " 'avg_calls_per_month',\n",
-       " 'avg_sms_per_month',\n",
-       " 'call_failure_rate',\n",
-       " 'unique_contact_ratio',\n",
-       " 'sms_to_call_ratio',\n",
-       " 'age_subscription_interaction',\n",
-       " 'age_charge_interaction']"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 66
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T11:54:34.011672Z",
-     "start_time": "2025-02-17T11:54:34.000996Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "poly = PolynomialFeatures(degree=2, include_bias=False)  # Adjust degree if needed\n",
-    "poly_features = poly.fit_transform(tdf[numerical_vars])"
-   ],
-   "id": "1a0ae4ffb672d0cf",
-   "outputs": [],
-   "execution_count": 67
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T11:54:34.093158Z",
-     "start_time": "2025-02-17T11:54:34.086463Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "poly_feature_names = poly.get_feature_names_out(numerical_vars)\n",
-    "poly_df = pd.DataFrame(poly_features, columns=poly_feature_names)"
-   ],
-   "id": "4e0c50628650c15a",
-   "outputs": [],
-   "execution_count": 68
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T11:54:34.152870Z",
-     "start_time": "2025-02-17T11:54:34.148061Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "poly_df[\"churn\"] = tdf[\"Churn\"]",
-   "id": "6bbab3d338e2ab8",
-   "outputs": [],
-   "execution_count": 69
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T11:54:34.338691Z",
-     "start_time": "2025-02-17T11:54:34.228848Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Compute correlation matrix\n",
-    "corr_matrix = poly_df.corr()"
-   ],
-   "id": "96573bdad608404",
-   "outputs": [],
-   "execution_count": 70
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T11:59:44.859555Z",
-     "start_time": "2025-02-17T11:59:44.854325Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "poly_df.columns",
-   "id": "ace221bc990dc701",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Seconds of Use', 'Frequency of use', 'Frequency of SMS',\n",
-       "       'Distinct Called Numbers', 'Customer Value', 'Call Efficiency', 'Age',\n",
-       "       'avg_calls_per_month', 'avg_sms_per_month', 'call_failure_rate',\n",
-       "       ...\n",
-       "       'unique_contact_ratio sms_to_call_ratio',\n",
-       "       'unique_contact_ratio age_subscription_interaction',\n",
-       "       'unique_contact_ratio age_charge_interaction', 'sms_to_call_ratio^2',\n",
-       "       'sms_to_call_ratio age_subscription_interaction',\n",
-       "       'sms_to_call_ratio age_charge_interaction',\n",
-       "       'age_subscription_interaction^2',\n",
-       "       'age_subscription_interaction age_charge_interaction',\n",
-       "       'age_charge_interaction^2', 'churn'],\n",
-       "      dtype='object', length=120)"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 74
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Dealing with Multicolinearity between determinant features",
-   "id": "2b96b8b89fc530f3"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-17T12:47:40.538286Z",
-     "start_time": "2025-02-17T12:47:35.654510Z"
+     "end_time": "2025-02-17T18:02:53.427422Z",
+     "start_time": "2025-02-17T18:02:53.346202Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Ensure we only take numeric values\n",
-    "X = poly_df.drop(columns = 'churn')\n",
+    "X = tdf.drop(columns = 'Churn')\n",
     "\n",
     "# Compute VIF for each feature\n",
     "vif_data = pd.DataFrame()\n",
@@ -4358,24 +4214,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                       Feature         VIF\n",
-      "33                        Frequency of use Age         inf\n",
-      "2                             Frequency of SMS         inf\n",
-      "3                      Distinct Called Numbers         inf\n",
-      "61   Distinct Called Numbers sms_to_call_ratio         inf\n",
-      "49       Frequency of SMS unique_contact_ratio         inf\n",
-      "..                                         ...         ...\n",
-      "115   sms_to_call_ratio age_charge_interaction  180.388940\n",
-      "118                   age_charge_interaction^2   97.101658\n",
-      "108   call_failure_rate age_charge_interaction   88.992896\n",
-      "106        call_failure_rate sms_to_call_ratio   70.142664\n",
-      "104                        call_failure_rate^2   26.872493\n",
-      "\n",
-      "[119 rows x 2 columns]\n"
+      "                         Feature          VIF\n",
+      "19  age_subscription_interaction  2630.566689\n",
+      "11                           Age  1468.879360\n",
+      "2            Subscription Length  1446.922469\n",
+      "4                 Seconds of Use   536.784971\n",
+      "13               Call Efficiency   520.779071\n",
+      "5               Frequency of use   450.543518\n",
+      "8                      Age Group   407.977558\n",
+      "21                         pca_1   393.286281\n",
+      "12                Customer Value   188.098208\n",
+      "22                         pca_2   149.010742\n",
+      "7        Distinct Called Numbers   136.210495\n",
+      "14           avg_calls_per_month   124.113687\n",
+      "6               Frequency of SMS   107.703993\n",
+      "15             avg_sms_per_month    90.505174\n",
+      "17          unique_contact_ratio    68.121186\n",
+      "10                        Status    59.654285\n",
+      "0                   Call Failure    45.850379\n",
+      "9                    Tariff Plan    42.051946\n",
+      "20        age_charge_interaction    33.014286\n",
+      "3                  Charge Amount    29.382021\n",
+      "16             call_failure_rate    19.373534\n",
+      "18             sms_to_call_ratio    17.594987\n",
+      "23                cluster_labels     2.742561\n",
+      "1                     Complaints     2.706021\n"
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 79
   },
   {
    "cell_type": "markdown",
